src/components/movies/moviesCard/MoviesCard.css
/*mobile 320*/

.moviesCard {
  box-sizing: border-box;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.08);
  border-radius: 6px;
}

.moviesCard__text-container {
  display: flex;
  justify-content: space-between;
}

.moviesCard__name {
  margin: 0;
  padding: 14px;
  font-weight: 500;
  font-size: 12px;
  line-height: 18px;
}

.moviesCard__duration {
  margin: 0;
  padding: 14px;
  font-weight: 400;
  font-size: 10px;
  line-height: 18px;
  color: #A0A0A0;
}

.moviesCard__iframe {
  width: 100%;
  height: 168px;
}

.moviesCard__button {
  min-width: 100px;
  height: 29px;
  border: none;
  border-radius: 30px;
  font-weight: 400;
  font-size: 12px;
  line-height: 11px;
  margin: 14px 0;
  padding: 0;
}

.moviesCard__button:hover {
  opacity: 70%;
  transition: 0.4s;
}

.moviesCard__button_type_disabled:hover {
  cursor: pointer;
}

.moviesCard__button_type_active {
  background-color: #FF4062;
  background-image: url(../../../images/checked.svg);
  background-repeat: no-repeat;
  background-position: center;
  cursor: not-allowed;
}

.moviesCard__button_type_to-close {
  background-image: url(../../../images/close-icon.svg);
  background-repeat: no-repeat;
  background-position: center;
}

.moviesCard__button_type_to-close:hover {
  cursor: pointer;
}

/*tablet 768 */

@media screen and (min-width: 631px) {
  .moviesCard__name {
    font-size: 15px;
    padding: 18px;
  }

  .moviesCard__duration {
    font-size: 13px;
    padding: 18px;
  }

  .moviesCard__button {
    margin: 18px 0;
  }
}

/* desktop 1024 */

/* @media screen and (min-width: 960px) {

} */

